[gd_scene load_steps=14 format=3 uid="uid://b41oickcktc0y"]

[ext_resource type="Script" path="res://Script/mob.gd" id="1_f0hol"]
[ext_resource type="Texture2D" uid="uid://dx3aldyggteay" path="res://asset/walk_mob01.png" id="1_jvdya"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_ejdfd"]
[ext_resource type="Texture2D" uid="uid://vn5ab2yjrg06" path="res://asset/Animation/Barn/hit.png" id="3_xhnet"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_227yq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="5_bywng"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_osicm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8ywv"]
size = Vector2(32, 34)

[sub_resource type="Animation" id="Animation_3o8yx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jvdya")]
}

[sub_resource type="Animation" id="Animation_jmnrl"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_xhnet")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 0)]
}

[sub_resource type="Animation" id="Animation_aerk7"]
resource_name = "walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jvdya")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ichrh"]
_data = {
"RESET": SubResource("Animation_3o8yx"),
"hit": SubResource("Animation_jmnrl"),
"walk": SubResource("Animation_aerk7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktswy"]
size = Vector2(34, 35)

[node name="desesperatedSlave" type="CharacterBody2D" groups=["mob"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_f0hol")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jvdya")
offset = Vector2(-2, 0)
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 7)
shape = SubResource("RectangleShape2D_r8ywv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ichrh")
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(5, 6.5)
shape = SubResource("RectangleShape2D_ktswy")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(20, 13)
target_position = Vector2(0, 17)
collision_mask = 2

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_ejdfd")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_227yq")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_bywng")
animation_player = NodePath("../../../AnimationPlayer")
animation_name = &"walk"

[node name="to hit" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("6_osicm")
to = NodePath("../../hit")
event = &"hit"
delay_in_seconds = "0.0"

[node name="hit" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_bywng")
animation_player = NodePath("../../../AnimationPlayer")
animation_name = &"hit"

[node name="to idle" type="Node" parent="StateChart/CompoundState/hit"]
script = ExtResource("6_osicm")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="to death" type="Node" parent="StateChart/CompoundState/hit"]
script = ExtResource("6_osicm")
to = NodePath("../../death")
event = &"death"
delay_in_seconds = "0.0"

[node name="death" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_bywng")
animation_player = NodePath("../../../AnimationPlayer")
animation_name = &"death"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/hit" to="." method="_on_hit_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/hit" to="." method="_on_hit_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/death" to="." method="_on_death_state_entered"]
